@startuml

title __MAIN's Class Diagram__\n

  package com.anniefraz.dissertation.main.csvResults {
    class CSVResult {
    }
  }
  

  package com.anniefraz.dissertation.main.csvResults {
    class CSVResultBuilder {
    }
  }
  

  package com.anniefraz.dissertation.main.csvResults {
    class CSVResultFileWriter {
    }
  }
  

  package com.anniefraz.dissertation.main.csvResults {
    interface CSVResultWriter {
    }
  }
  

  package com.anniefraz.dissertation.main.algorithms {
    class GAMain {
    }
  }
  

  package com.anniefraz.dissertation.main.algorithms {
    class HCMain {
    }
  }
  

  package com.anniefraz.dissertation.main.application {
    class Random {
    }
  }
  

  package com.anniefraz.dissertation.main.input {
    class TestUserInput {
    }
  }
  

  CSVResult o-- Patch : offspringParent
  CSVResultBuilder o-- Patch : offspringParent
  CSVResultFileWriter -up-|> CSVResultWriter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
